	Fixed bug: AccessDeniedException thrown when saving hidden .gitignore or .mailmap file
	Fixed bug: Removed empty root node from tree in file tree
	Fixed bug: If HOMEDRIVE is defined, launching Git Bash would result in a different home directory than GitExtensions
	Added Japanese translation
	Added Dutch translation
	Added functionality for creating and editing translations
	Added option to mark ill formed commit messages
	Added the ability to move to the prev/next quickseach string by hitting alt+arrowup/alt+arrowdown
	Added plugin to start gource repository visualizer
	Added toolbar to diff viewer to jump to next change
	Added option to show nonprinting characters in file viewer
	Added file explorer option to the file menu
	Added from and to branch to push dialog 
	Added option to create annotated tag	
	Quicksearch now also searches in branches
	All windows positions are now saved	
	Settings dialog performance improved
	The scoll position in file viewer is saved when switching revision.
	Author image size can be set in context menu of gravatar control
	The diff viewer now shows the old sha1 and new sha1 when viewing a submodule diff
	The default web proxy is used to connect to internet
	Replaced checkbox on merge branch dialog for more user friendly radio buttons

Version 1.93
	Fixed bug: wrong icon drawn in commit dialog for deleted files
	Reset selected files in the commit dialog asks to delete new files.
	Author images are only cached for 5 days now
	Added start page
	Added 'force' option to checkout revision and checkout branch
	Added 'rebase' to context menu in revision grid
	Added 'reset chunk of file' option to commit dialog
	Added drop down menu to the 'open' button in the browse dialog
	Added support for WinMerge as diff tool

Version 1.92
	Fixed bug: the application hangs randomly
	Fixed bug: quotes in local settings were not escaped properly
	Fixed progress bar when pulling and fetching under git > 1.7.1