@@ -125,6 +125,10 @@
   <data name="RecentRepositories.Size" type="System.Drawing.Size, System.Drawing">
     <value>314, 300</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="DonateCategory.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Top</value>
+  </data>
   <data name="DonateCategory.Size" type="System.Drawing.Size, System.Drawing">
     <value>314, 106</value>
   </data>
